--- a/pages/categories.html
+++ b/pages/categories.html
@@ -28,29 +28,29 @@
 
                         <aside class="card-wrapper row">
 
-                            <div class="card col" onclick="moveTo('./tarifs/enfant.html')">
+                            <a href="/pages/tarifs/enfant.html" class="card col">
                                 <div class="layer"></div>
                                 <img src=".././assets/images/baby.webp" alt="Image de déscription du tarif">
                                 <span class="title">Bébé / Enfant</span>
-                            </div>
+                            </a>
 
-                            <div class="card col" onclick="moveTo('./tarifs/portrait.html')">
+                            <a href="/pages/tarifs/portrait.html" class="card col">
                                 <div class="layer"></div>
                                 <img src=".././assets/images/portrait.webp" alt="Image de déscription du tarif">
                                 <span class="title">Portraits</span>
-                            </div>
+                            </a>
 
-                            <div class="card col" onclick="moveTo('./tarifs/mariage.html')">
+                            <a href="/pages/tarifs/mariage.html" class="card col">
                                 <div class="layer"></div>
                                 <img src=".././assets/images/mariage.webp" alt="Image de déscription du tarif">
                                 <span class="title">Mariage</span>
-                            </div>
+                            </a>
 
-                            <div class="card col" onclick="moveTo('./tarifs/grossesse.html')">
+                            <a href="/pages/tarifs/grossesse.html" class="card col">
                                 <div class="layer"></div>
                                 <img src=".././assets//images/grossesse.webp" alt="Image de déscription du tarif">
-                                <span class="title">Grosesse</span>
-                            </div>
+                                <span class="title">Grossesse</span>
+                            </a>
 
                         </aside>
 
