--- a/accueil.html
+++ b/accueil.html
@@ -195,10 +195,10 @@
                         <li data-aos="fade-right" data-aos-delay="1100" data-aos-duration="400"
                             data-aos-easing="ease-in-out">
                             <img src="./assets/svg/pine.svg" alt="Icone de résaux sociaux">
-                            <div id="mobileAddr" class="contact-wrapper">
-                                <!-- Studio: -->
+                            <div class="contact-wrapper sutdio-contact">
+                                Studio:
                                 <a href="http://maps.google.com/?q=25 impasse George Sand 83390 Cuers">
-                                    <span id="addr"></span>
+                                    <span>25 impasse George Sand 83390 Cuers</span>
                                 </a>
                             </div>
                         </li>
