--- a/accueil.html
+++ b/accueil.html
@@ -8,149 +8,112 @@
     <meta name="author" content="Aurélie Lhuiller">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Lili Photo</title>
+    <title>Lili Photo - Photographe Pro</title>
+    <link rel="icon" href="./assets/svg/camera.svg" type="image/svg">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
-
-    <header>
-        <button onclick="topFunction()" id="scroll-back">↑</button>
-
+    <header><button onclick="topFunction()" id="scroll-back">↑</button>
         <div class="container">
             <nav class="row">
-                <div id="header-top">
-                    <img id="logo" src="./assets/images/home logo.png" alt="Logo du site Aurélie Lhuillier Photographe">
-                    <h3 id="title" data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in" style="cursor: pointer;">Lili Photo</h3>
-                    <button onClick="toggleMenu()" id="menu-btn">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </button>
+                <div id="header-top"><img id="logo" src="./assets/images/home logo.png"
+                        alt="Logo du site Aurélie Lhuillier Photographe">
+                    <h3 id="title" data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in"
+                        style="cursor: pointer;">Lili Photo</h3><button onClick="toggleMenu()"
+                        id="menu-btn"><span></span><span></span><span></span></button>
                 </div>
                 <ul class="row">
                     <li><a class="nav-link selected" href="#">Accueil</a></li>
                     <li><a class="nav-link" href="#about">A Propos</a></li>
                     <li><a class="nav-link" href="#gallery">Galeries</a></li>
                     <li><a class="nav-link" href="#contact">Contact</a></li>
-                    <li class="sub-link">
-                        <a class="nav-link" href="./pages/categories.html">Tarifs</a>
-                    </li>
-
+                    <li class="sub-link"><a class="nav-link" href="./pages/categories.html">Tarifs</a></li>
                     <div id="header-bottom-mobile">
-                        <div class="row">
-                            <a href="https://www.instagram.com/liliphoto18/" class="media-link">
-                                <img src="./assets/svg/logo-instagram.svg" alt="Boutton de redirection vers instagram">
-                            </a>
-                            <a href="#" class="media-link">
-                                <img src="./assets/svg/logo-facebook.svg" alt="Boutton de redirection vers facebook">
-                            </a>
+                        <div class="row"><a href="https://www.instagram.com/liliphoto18/" class="media-link"><img
+                                    src="./assets/svg/logo-instagram.svg"
+                                    alt="Boutton de redirection vers instagram"></a><a href="#" class="media-link"><img
+                                    src="./assets/svg/logo-facebook.svg" alt="Boutton de redirection vers facebook"></a>
                         </div>
                     </div>
                     <ul />
             </nav>
             <div id="header-bottom">
-                <div class="row">
-                    <a href="https://www.instagram.com/liliphoto18/" class="media-link">
-                        <img src="./assets/svg/logo-instagram.svg" alt="Boutton de redirection vers instagram">
-                    </a>
-                    <a href="#" class="media-link">
-                        <img src="./assets/svg/logo-facebook.svg" alt="Boutton de redirection vers facebook">
-                    </a>
-                </div>
+                <div class="row"><a href="https://www.instagram.com/liliphoto18/" class="media-link"><img
+                            src="./assets/svg/logo-instagram.svg" alt="Boutton de redirection vers instagram"></a><a
+                        href="#" class="media-link"><img src="./assets/svg/logo-facebook.svg"
+                            alt="Boutton de redirection vers facebook"></a></div>
             </div>
         </div>
     </header>
     <main>
         <section id="about">
             <div class="container col">
-                <h3 data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in" style="cursor: pointer;">Lili Photo</h3>
-                <div class="image-container">
-                    <img data-aos="fade-in" data-aos-delay="800" data-aos-easing="ease-in-out" class="left-side"
-                        src="./assets/images/lili.webp" alt="Photo de profile du photographe Aurélie Lhuillier">
-
-                        <!-- Mobile image -->
-                        <img data-aos="fade-in" data-aos-delay="800" data-aos-easing="ease-in-out" id="mobile-image" class="left-side"
+                <h3 data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in" style="cursor: pointer;">Lili
+                    Photo</h3>
+                <div class="image-container"><img data-aos="fade-in" data-aos-delay="800" data-aos-easing="ease-in-out"
+                        class="left-side" src="./assets/images/lili.webp"
+                        alt="Photo de profile du photographe Aurélie Lhuillier"><img data-aos="fade-in"
+                        data-aos-delay="800" data-aos-easing="ease-in-out" id="mobile-image" class="left-side"
                         src="./assets/images/lisa color.webp" alt="Photo de profile du photographe Aurélie Lhuillier">
                 </div>
-
-                    <div data-aos="fade-in" data-aos-delay="900" data-aos-easing="ease-in-out"
-                        class="btn-container row">
-                        <a class="button" href="#gallery">Mon Travail</a>
-                        <a class="button" href="./pages/mon-histoire.html">Mon Histoire</a>
-                        <a class="button" href="#contact">Me Contacter</a>
-                        <a class="button" href="./pages/categories.html">Tarifs</a>
-                    </div>
-
-                </div>
+                <div data-aos="fade-in" data-aos-delay="900" data-aos-easing="ease-in-out" class="btn-container row"><a
+                        class="button" href="#gallery">Mon Travail</a><a class="button"
+                        href="./pages/mon-histoire.html">Mon Histoire</a><a class="button" href="#contact">Me
+                        Contacter</a><a class="button" href="./pages/categories.html">Tarifs</a></div>
+            </div>
             </div>
         </section>
-
         <section id="gallery">
             <div class="container">
                 <h2>Galeries</h2>
                 <ul>
+                    <li><img src="./assets/images/1.webp" alt="Image de présentation du travail du photographe"></li>
                     <li>
-                        <img src="./assets/images/1.webp" alt="Image de présentation du travail du photographe">
-                    </li>
-
-
-
-                    <li>
-                        <div class="layer"></div>
-                        <img src="./assets/images/katia.webp" alt="Image de présentation du travail du photographe">
-                    </li>
-
-                    <li>
-                        <div class="layer"></div>
-                        <img src="./assets/images/claudia.webp" alt="Image de présentation du travail du photographe">
-                    </li>
-
-                    <li>
-                        <div class="layer"></div>
-                        <img src="./assets/images/6.webp" alt="Image de présentation du travail du photographe">
-                    </li>
-
-                    <li>
-                        <div class="layer"></div>
-                        <img src="./assets/images/7.webp" alt="Image de présentation du travail du photographe">
-                    </li>
-
-                    <li>
-                        <div class="layer"></div>
-                        <img src="./assets/images/can.webp" alt="Image de présentation du travail du photographe">
-                    </li>
-
-                    <li>
-                        <div class="layer"></div>
-                        <img src="./assets/images/enfant2.webp" alt="Image de présentation du travail du photographe">
-                    </li>
-
-                    <li>
-                        <div class="layer"></div>
-                        <img src="./assets/images/4.webp" alt="Image de présentation du travail du photographe">
-                    </li>
-
-                    <li>
-                        <div class="layer"></div>
-                        <img src="./assets/images/11.webp" alt="Image de présentation du travail du photographe">
+                        <div class="layer"></div><img src="./assets/images/katia.webp"
+                            alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div>
-                        <img src="./assets/images/9.webp" alt="Image de présentation du travail du photographe">
+                        <div class="layer"></div><img src="./assets/images/claudia.webp"
+                            alt="Image de présentation du travail du photographe">
                     </li>
-
                     <li>
-                        <div class="layer"></div>
-                        <img src="./assets/images/8.webp" alt="Image de présentation du travail du photographe">
+                        <div class="layer"></div><img src="./assets/images/6.webp"
+                            alt="Image de présentation du travail du photographe">
                     </li>
-
                     <li>
-                        <div class="layer"></div>
-                        <img src="./assets/images/enfant1.webp" alt="Image de présentation du travail du photographe">
+                        <div class="layer"></div><img src="./assets/images/7.webp"
+                            alt="Image de présentation du travail du photographe">
                     </li>
-
+                    <li>
+                        <div class="layer"></div><img src="./assets/images/can.webp"
+                            alt="Image de présentation du travail du photographe">
+                    </li>
+                    <li>
+                        <div class="layer"></div><img src="./assets/images/enfant2.webp"
+                            alt="Image de présentation du travail du photographe">
+                    </li>
+                    <li>
+                        <div class="layer"></div><img src="./assets/images/4.webp"
+                            alt="Image de présentation du travail du photographe">
+                    </li>
+                    <li>
+                        <div class="layer"></div><img src="./assets/images/11.webp"
+                            alt="Image de présentation du travail du photographe">
+                    </li>
+                    <li>
+                        <div class="layer"></div><img src="./assets/images/9.webp"
+                            alt="Image de présentation du travail du photographe">
+                    </li>
+                    <li>
+                        <div class="layer"></div><img src="./assets/images/8.webp"
+                            alt="Image de présentation du travail du photographe">
+                    </li>
+                    <li>
+                        <div class="layer"></div><img src="./assets/images/enfant1.webp"
+                            alt="Image de présentation du travail du photographe">
+                    </li>
                 </ul>
             </div>
         </section>
@@ -172,45 +135,30 @@
                         data-aos-easing="ease-in-out">Contact</h3>
                     <ul>
                         <li data-aos="fade-right" data-aos-delay="1000" data-aos-duration="400"
-                            data-aos-easing="ease-in-out">
-                            <img src="./assets/svg/phone.svg" alt="Icone de résaux sociaux">
-                            <div class="contact-wrapper">
-                                Tel:
-                                <a href="#!" onclick="copyPhone()">
-                                    <span id="phone">06 14 75 15 04</span>
-                                </a>
-                            </div>
+                            data-aos-easing="ease-in-out"><img src="./assets/svg/phone.svg"
+                                alt="Icone de résaux sociaux">
+                            <div class="contact-wrapper">Tel: <a href="#!" onclick="copyPhone()"><span id="phone">06 14
+                                        75 15 04</span></a></div>
                         </li>
                         <li data-aos="fade-right" data-aos-delay="1050" data-aos-duration="400"
-                            data-aos-easing="ease-in-out">
-                            <img src="./assets/svg/mail-outline.svg" alt="Icone de résaux sociaux">
-                            <div class="contact-wrapper">
-                                E-Mail:
-                                <a
+                            data-aos-easing="ease-in-out"><img src="./assets/svg/mail-outline.svg"
+                                alt="Icone de résaux sociaux">
+                            <div class="contact-wrapper">E-Mail: <a
                                     href="https://mail.google.com/mail/?view=cm&fs=1&to=liliphoto18@gmail.com"><span>liliphoto18@gmail.com</span></a>
                             </div>
                         </li>
-
-
                         <li data-aos="fade-right" data-aos-delay="1100" data-aos-duration="400"
-                            data-aos-easing="ease-in-out">
-                            <img src="./assets/svg/pine.svg" alt="Icone de résaux sociaux">
-                            <div class="contact-wrapper sutdio-contact">
-                                Studio:
-                                <a href="http://maps.google.com/?q=25 impasse George Sand 83390 Cuers">
-                                    <span>25 impasse George Sand 83390 Cuers</span>
-                                </a>
-                            </div>
+                            data-aos-easing="ease-in-out"><img src="./assets/svg/pine.svg"
+                                alt="Icone de résaux sociaux">
+                            <div class="contact-wrapper sutdio-contact">Studio: <a
+                                    href="http://maps.google.com/?q=25 impasse George Sand 83390 Cuers"><span>25 impasse
+                                        George Sand 83390 Cuers</span></a></div>
                         </li>
-
-
                         <li data-aos="fade-right" data-aos-delay="1150" data-aos-duration="400"
-                            data-aos-easing="ease-in-out">
-                            <img src="./assets/svg/logo-instagram.svg" alt="Icone de résaux sociaux">
-                            <div class="contact-wrapper">
-                                Instagram:
-                                <a href="https://www.instagram.com/liliphoto18/"><span>@liliphoto18</span></a>
-                            </div>
+                            data-aos-easing="ease-in-out"><img src="./assets/svg/logo-instagram.svg"
+                                alt="Icone de résaux sociaux">
+                            <div class="contact-wrapper">Instagram: <a
+                                    href="https://www.instagram.com/liliphoto18/"><span>@liliphoto18</span></a></div>
                         </li>
                     </ul>
                 </div>
@@ -219,18 +167,7 @@
     </main>
     <script defer type="text/javascript" src="./script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init({
-            offset: 100,
-            delay: 200,
-            duration: 1000,
-            disable: function () {
-                var maxWidth = 1920;
-                return window.innerWidth < maxWidth;
-            }
-        });
-
-    </script>
+    <script>AOS.init({ offset: 100, delay: 200, duration: 1000, disable: function () { var maxWidth = 1920; return window.innerWidth < maxWidth; } }); </script>
 </body>
 
 </html>
