--- a/accueil.html
+++ b/accueil.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Aurélie Lhuillier Photographe professionnel">
-    <meta name="keywords" content="photo, photographe, shoot, shooting, aurélue, lhuiller, séance photo">
+    <meta name="description" content="Page d'accueil du site d'Aurélie Lhuillier, Photographe professionnel basée à cuers">
+    <meta name="keywords" content="photo, photographe, shoot, shooting, aurélie, lhuiller, séance photo">
     <meta name="author" content="Aurélie Lhuiller">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Lili Photo - Photographe Pro</title>
+    <title>Lili Photo - Aurélie</title>
     <link rel="icon" href="./assets/svg/camera.svg" type="image/svg">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
