--- a/pages/categories.html
+++ b/pages/categories.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Page des tarifs du site d'Aurélie Lhuillier, Photographe professionnel basée à cuers">
+    <meta name="keywords" content="photo, photographe, shoot, shooting, aurélie, lhuiller, séance photo, tarifs">
+    <meta name="author" content="Aurélie Lhuiller">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Lili Photo - Photographe Pro</title>
