--- a/accueil.html
+++ b/accueil.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Aurélie Lhuiller">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Lili Photo - Aurélie</title>
+    <title>Lili Photo - Aurélie Lhuiller</title>
     <link rel="icon" href="./assets/svg/camera.svg" type="image/svg">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
