--- a/pages/tarifs/mariage.html
+++ b/pages/tarifs/mariage.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Lili Photo - Séance Mariage</title>
-    <link rel="icon" href="./assets/svg/camera.svg" type="image/svg">
+    <link rel="icon" href="/./assets/svg/camera.svg" type="image/svg">
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="../../css/tarifs.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
