update [ accueil href: ]

--- a/pages/categories.html
+++ b/pages/categories.html
@@ -58,7 +58,7 @@
 
                         </aside>
 
-                        <a href=".././accueil.html" class="button">← Retour</a>
+                        <a href="..//" class="button">← Retour</a>
 
                     </div>
 
