--- a/pages/mon-histoire.html
+++ b/pages/mon-histoire.html
@@ -61,7 +61,7 @@
                             réaliser vos envies.
                             Je suis à l’écoute de tous vos projets…
                         </p>
-                        <a href="../accueil.html" class="button">← Retour</a>
+                        <a href="./" class="button">← Retour</a>
 
                     </div>
 
