--- a/pages/tarifs/grossesse.html
+++ b/pages/tarifs/grossesse.html
@@ -51,7 +51,7 @@
 
                                     <span class="tar-card-price">320</span>
 
-                                    <a href="../../accueil.html#contact" class="button">Réserver</a>
+                                    <a href=".././#contact" class="button">Réserver</a>
                                 </div>
                             </div>
 
@@ -77,7 +77,7 @@
 
                                     <span class="tar-card-price">250</span>
 
-                                    <a href="../../accueil.html#contact" class="button">Réserver</a>
+                                    <a href=".././#contact" class="button">Réserver</a>
                                 </div>
                             </div>
 
@@ -97,7 +97,7 @@
 
                                     <span class="tar-card-price">600</span>
 
-                                    <a href="../../accueil.html#contact" class="button">Réserver</a>
+                                    <a href=".././#contact" class="button">Réserver</a>
                                 </div>
                             </div>
                         </aside>
