--- a/pages/tarifs/mariage.html
+++ b/pages/tarifs/mariage.html
@@ -51,7 +51,7 @@
 
                                     <span class="tar-card-price">1480</span>
 
-                                    <a href="../../accueil.html#contact" class="button">Réserver</a>
+                                    <a href=".././#contact" class="button">Réserver</a>
                                 </div>
                             </div>
 
@@ -77,7 +77,7 @@
 
                                     <span class="tar-card-price">2200</span>
 
-                                    <a href="../../accueil.html#contact" class="button">Réserver</a>
+                                    <a href=".././#contact" class="button">Réserver</a>
                                 </div>
                             </div>
                         </aside>
