--- a/pages/tarifs/portrait.html
+++ b/pages/tarifs/portrait.html
@@ -49,7 +49,7 @@
 
                                     <span class="tar-card-price">95</span>
 
-                                    <a href="../../accueil.html#contact" class="button">Réserver</a>
+                                    <a href=".././#contact" class="button">Réserver</a>
                                 </div>
                             </div>
 
@@ -76,7 +76,7 @@
 
                                     <span class="tar-card-price">350</span>
 
-                                    <a href="../../accueil.html#contact" class="button">Réserver</a>
+                                    <a href=".././#contact" class="button">Réserver</a>
                                 </div>
                             </div>
                         </aside>
