--- a/pages/tarifs/enfant.html
+++ b/pages/tarifs/enfant.html
@@ -53,7 +53,7 @@
 
                                     <span class="tar-card-price">340</span>
 
-                                    <a href="../../accueil.html#contact" class="button">Réserver</a>
+                                    <a href=".././#contact" class="button">Réserver</a>
                                 </div>
                             </div>
 
@@ -78,7 +78,7 @@
 
                                     <span class="tar-card-price">280</span>
 
-                                    <a href="../../accueil.html#contact" class="button">Réserver</a>
+                                    <a href=".././#contact" class="button">Réserver</a>
                                 </div>
                             </div>
                         </aside>
