upadte [ meta description ]

--- a/accueil.html
+++ b/accueil.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Page d'accueil du site d'Aurélie Lhuillier, Photographe professionnel basée à cuers">
+    <meta name="description" content="Liliphoto.fr est un site Web proposant des services de photographie de mariages, des paysages, des portraits et des scènes de la vie quotidienne en passant par des séances grossesse ou bien de nouveaux nés. Aurélie Lhuillier est une photographe professionnelle et passionnée, qui aime réaliser vos projets de photographie	!">
     <meta name="keywords" content="photo, photographe, shoot, shooting, aurélie, lhuiller, séance photo">
     <meta name="author" content="Aurélie Lhuiller">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Lili Photo - Aurélie Lhuiller</title>
-    <link rel="icon" href="./assets/svg/camera.svg" type="image/svg">
+    <link rel="icon" href="./assets/svg/camera.svg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -20,8 +20,8 @@
             <nav class="row">
                 <div id="header-top"><img id="logo" src="./assets/images/home logo.png"
                         alt="Logo du site Aurélie Lhuillier Photographe">
-                    <h3 id="title" data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in"
-                        style="cursor: pointer;">Lili Photo</h3><button onClick="toggleMenu()"
+                    <h1 id="title" data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in"
+                        style="cursor: pointer;">Lili Photo</h1><button onClick="toggleMenu()"
                         id="menu-btn"><span></span><span></span><span></span></button>
                 </div>
                 <ul class="row">
@@ -50,8 +50,8 @@
     <main>
         <section id="about">
             <div class="container col">
-                <h3 data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in" style="cursor: pointer;">Lili
-                    Photo</h3>
+                <h1 data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in" style="cursor: pointer;">Lili
+                    Photo</h1>
                 <div class="image-container"><img data-aos="fade-in" data-aos-delay="800" data-aos-easing="ease-in-out"
                         class="left-side" src="./assets/images/lili.webp"
                         alt="Photo de profile du photographe Aurélie Lhuillier"><img data-aos="fade-in"
