--- a/pages/tarifs/grossesse.html
+++ b/pages/tarifs/grossesse.html
@@ -80,7 +80,7 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img src="../../assets/images/grossesse.webp" alt="Image de déscription du tarif">
+                                    <img style="object-position: center;" src="../../assets/images/bebeEtVentre.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
