--- a/pages/tarifs/portrait.html
+++ b/pages/tarifs/portrait.html
@@ -55,7 +55,8 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img src="../../assets/images/portrait2.webp" alt="Image de déscription du tarif">
+                                    <img class="desktop" src="../../assets/images/portrait2.webp" alt="Image de déscription du tarif">
+                                    <img class="mobile" src="../../assets/images/lisa2.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
@@ -64,7 +65,7 @@
 
                                     <ul>
                                         <li><span>Seul ou à deux</span></li>
-                                        <li><span>En sutdio ou à l'éxterieur</span></li>
+                                        <li><span>En studio ou à l'éxterieur</span></li>
                                         <li><span>1h30 de shooting</span></li>
                                         <li><span>Thème de votre choix</span></li>
                                         <li><span>10 photos HD + Noir et blanc offertes</span></li>
