--- a/accueil.html
+++ b/accueil.html
@@ -20,7 +20,7 @@
             <nav class="row">
                 <div id="header-top"><img id="logo" src="./assets/images/home logo.png"
                         alt="Logo du site Aurélie Lhuillier Photographe">
-                    <h3 id="title" data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in"
+                    <h3 class="mobile" id="title" data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in"
                         style="cursor: pointer;">Lili Photo</h3><button onClick="toggleMenu()"
                         id="menu-btn"><span></span><span></span><span></span></button>
                 </div>
@@ -150,7 +150,7 @@
                         <li data-aos="fade-right" data-aos-delay="1100" data-aos-duration="400"
                             data-aos-easing="ease-in-out"><img src="./assets/svg/pine.svg"
                                 alt="Icone de résaux sociaux">
-                            <div class="contact-wrapper sutdio-contact">Studio: <a
+                            <div class="contact-wrapper studio-contact">Studio: <a
                                     href="http://maps.google.com/?q=25 impasse George Sand 83390 Cuers"><span>25 impasse
                                         George Sand 83390 Cuers</span></a></div>
                         </li>
