--- a/accueil.html
+++ b/accueil.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Liliphoto.fr est un site Web proposant des services de photographie de mariages, des paysages, des portraits et des scènes de la vie quotidienne en passant par des séances grossesse ou bien de nouveaux nés. Aurélie Lhuillier est une photographe professionnelle et passionnée, qui aime réaliser vos projets de photographie	!">
-    <meta name="keywords" content="photo, photographe, shoot, shooting, aurélie, Lhuillier, séance photo">
-    <meta name="author" content="Aurélie Lhuillier">
+    <meta name="description" content="Aurélie Lhuillier Photographe professionnel">
+    <meta name="keywords" content="photo, photographe, shoot, shooting, aurélue, lhuiller, séance photo">
+    <meta name="author" content="Aurélie Lhuiller">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Lili Photo - Aurélie Lhuillier photographe professionnelle. Séances portraits, grossesse</title>
-    <link rel="icon" href="./assets/svg/camera.svg" type="image/x-icon">
+    <title>Lili Photo - Photographe Pro</title>
+    <link rel="icon" href="./assets/svg/camera.svg" type="image/svg">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -20,8 +20,8 @@
             <nav class="row">
                 <div id="header-top"><img id="logo" src="./assets/images/home logo.png"
                         alt="Logo du site Aurélie Lhuillier Photographe">
-                    <h1 id="title" data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in"
-                        style="cursor: pointer;">Lili Photo</h1><button onClick="toggleMenu()"
+                    <h3 class="mobile" id="title" data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in"
+                        style="cursor: pointer;">Lili Photo</h3><button onClick="toggleMenu()"
                         id="menu-btn"><span></span><span></span><span></span></button>
                 </div>
                 <ul class="row">
@@ -50,8 +50,8 @@
     <main>
         <section id="about">
             <div class="container col">
-                <h1 data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in" style="cursor: pointer;">Lili
-                    Photo</h1>
+                <h3 data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in" style="cursor: pointer;">Lili
+                    Photo</h3>
                 <div class="image-container"><img data-aos="fade-in" data-aos-delay="800" data-aos-easing="ease-in-out"
                         class="left-side" src="./assets/images/lili.webp"
                         alt="Photo de profile du photographe Aurélie Lhuillier"><img data-aos="fade-in"
@@ -150,7 +150,7 @@
                         <li data-aos="fade-right" data-aos-delay="1100" data-aos-duration="400"
                             data-aos-easing="ease-in-out"><img src="./assets/svg/pine.svg"
                                 alt="Icone de résaux sociaux">
-                            <div class="contact-wrapper sutdio-contact">Studio: <a
+                            <div class="contact-wrapper studio-contact">Studio: <a
                                     href="http://maps.google.com/?q=25 impasse George Sand 83390 Cuers"><span>25 impasse
                                         George Sand 83390 Cuers</span></a></div>
                         </li>
