--- a/pages/categories.html
+++ b/pages/categories.html
@@ -3,13 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Liliphoto.fr est un site Web proposant des services de photographie de mariages, des paysages, des portraits et des scènes de la vie quotidienne en passant par des séances grossesse ou bien de nouveaux nés. Aurélie Lhuillier est une photographe professionnelle et passionnée, qui aime réaliser vos projets de photographie	!">
-    <meta name="keywords" content="photo, photographe, shoot, shooting, aurélie, Lhuillier, séance photo, tarifs">
-    <meta name="author" content="Aurélie Lhuillier">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Lili Photo - Catégories</title>
-    <link rel="icon" href="../assets/svg/camera.svg" type="image/x-icon">
+    <title>Lili Photo - Photographe Pro</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/tarifs.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -58,7 +54,7 @@
 
                         </aside>
 
-                        <a href="..//" class="button">← Retour</a>
+                        <a href=".././accueil.html" class="button">← Retour</a>
 
                     </div>
 
