--- a/pages/categories.html
+++ b/pages/categories.html
@@ -30,25 +30,25 @@
 
                             <a href="/pages/tarifs/enfant.html" class="card col">
                                 <div class="layer"></div>
-                                <img src=".././assets/images/baby.webp" alt="Image de déscription du tarif">
+                                <img loading="lazy" src=".././assets/images/baby.webp" alt="Image de déscription du tarif">
                                 <span class="title">Bébé / Enfant</span>
                             </a>
 
                             <a href="/pages/tarifs/portrait.html" class="card col">
                                 <div class="layer"></div>
-                                <img src=".././assets/images/portrait.webp" alt="Image de déscription du tarif">
+                                <img loading="lazy" src=".././assets/images/portrait.webp" alt="Image de déscription du tarif">
                                 <span class="title">Portraits</span>
                             </a>
 
                             <a href="/pages/tarifs/mariage.html" class="card col">
                                 <div class="layer"></div>
-                                <img src=".././assets/images/mariage.webp" alt="Image de déscription du tarif">
+                                <img loading="lazy" src=".././assets/images/mariage.webp" alt="Image de déscription du tarif">
                                 <span class="title">Mariage</span>
                             </a>
 
                             <a href="/pages/tarifs/grossesse.html" class="card col">
                                 <div class="layer"></div>
-                                <img src=".././assets//images/grossesse.webp" alt="Image de déscription du tarif">
+                                <img loading="lazy" src=".././assets//images/grossesse.webp" alt="Image de déscription du tarif">
                                 <span class="title">Grossesse</span>
                             </a>
 
