--- a/pages/tarifs/enfant.html
+++ b/pages/tarifs/enfant.html
@@ -32,7 +32,7 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img src="../../assets/images/baby.webp" alt="Image de déscription du tarif">
+                                    <img loading="lazy" src="../../assets/images/baby2.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
@@ -47,7 +47,7 @@
                                         <li><span>Nombreux accessoires fournis</span></li>
                                     </ul>
 
-                                    <span class="tar-card-price">340</span>
+                                    <span class="tar-card-price">300</span>
 
                                     <a href="../../accueil.html#contact" class="button">Réserver</a>
                                 </div>
@@ -59,7 +59,7 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img src="../../assets/images/enfant2.webp" alt="Image de déscription du tarif">
+                                    <img loading="lazy" src="../../assets/images/enfant2.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
@@ -72,7 +72,7 @@
                                         <li><span>10 photos HD + Noir et blanc offertes</span></li>
                                     </ul>
 
-                                    <span class="tar-card-price">280</span>
+                                    <span class="tar-card-price">250</span>
 
                                     <a href="../../accueil.html#contact" class="button">Réserver</a>
                                 </div>
