--- a/pages/tarifs/grossesse.html
+++ b/pages/tarifs/grossesse.html
@@ -31,7 +31,7 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img src="../../assets/images/grossesse2.webp" alt="Image de déscription du tarif">
+                                    <img loading="lazy" src="../../assets/images/grossesse2.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
@@ -45,7 +45,7 @@
                                         <li><span>Dans un rayon de 40 km autour de cuers (83) Nombreux accessoires fournis</span></li>
                                     </ul>
 
-                                    <span class="tar-card-price">320</span>
+                                    <span class="tar-card-price">300</span>
 
                                     <a href="../../accueil.html#contact" class="button">Réserver</a>
                                 </div>
@@ -57,7 +57,7 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img src="../../assets/images/grossesse.webp" alt="Image de déscription du tarif">
+                                    <img loading="lazy" src="../../assets/images/grossesse.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
@@ -80,7 +80,7 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img style="object-position: center;" src="../../assets/images/bebeEtVentre.webp" alt="Image de déscription du tarif">
+                                    <img loading="lazy" style="object-position: center;" src="../../assets/images/bebeEtVentre.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
@@ -91,7 +91,7 @@
                                         <li><span>20 photos HD à choisir parmi les deux galeries + Noir et blanc offerte</span></li>
                                     </ul>
 
-                                    <span class="tar-card-price">600</span>
+                                    <span class="tar-card-price">500</span>
 
                                     <a href="../../accueil.html#contact" class="button">Réserver</a>
                                 </div>
