--- a/pages/tarifs/mariage.html
+++ b/pages/tarifs/mariage.html
@@ -31,7 +31,7 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img src="../../assets/images/mariage.webp" alt="Image de déscription du tarif">
+                                    <img loading="lazy" src="../../assets/images/mariage.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
@@ -45,7 +45,7 @@
                                         <li><span>Clé usb offerte - toutes les photos en HD</span></li>
                                     </ul>
 
-                                    <span class="tar-card-price">1480</span>
+                                    <span class="tar-card-price">1250</span>
 
                                     <a href="../../accueil.html#contact" class="button">Réserver</a>
                                 </div>
@@ -57,7 +57,7 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img src="../../assets/images/mariage bonus.webp" alt="Image de déscription du tarif">
+                                    <img loading="lazy" src="../../assets/images/mariage bonus.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
@@ -71,7 +71,7 @@
                                         <li><span>Clé usb offerte - toutes les photos en HD</span></li>
                                     </ul>
 
-                                    <span class="tar-card-price">2200</span>
+                                    <span class="tar-card-price">2000</span>
 
                                     <a href="../../accueil.html#contact" class="button">Réserver</a>
                                 </div>
