--- a/pages/tarifs/portrait.html
+++ b/pages/tarifs/portrait.html
@@ -31,7 +31,7 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img src="../../assets/images/portrait.webp" alt="Image de déscription du tarif">
+                                    <img loading="lazy" src="../../assets/images/portrait.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
@@ -43,7 +43,7 @@
                                         <li><span>5 photos HD</span></li>
                                     </ul>
 
-                                    <span class="tar-card-price">95</span>
+                                    <span class="tar-card-price">90</span>
 
                                     <a href="../../accueil.html#contact" class="button">Réserver</a>
                                 </div>
@@ -55,8 +55,8 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img class="desktop" src="../../assets/images/portrait2.webp" alt="Image de déscription du tarif">
-                                    <img class="mobile" src="../../assets/images/lisa2.webp" alt="Image de déscription du tarif">
+                                    <img loading="lazy" class="desktop" src="../../assets/images/portrait2.webp" alt="Image de déscription du tarif">
+                                    <img loading="lazy" class="mobile" src="../../assets/images/lisa2.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
@@ -71,7 +71,7 @@
                                         <li><span>10 photos HD + Noir et blanc offertes</span></li>
                                     </ul>
 
-                                    <span class="tar-card-price">350</span>
+                                    <span class="tar-card-price">300</span>
 
                                     <a href="../../accueil.html#contact" class="button">Réserver</a>
                                 </div>
