--- a/accueil.html
+++ b/accueil.html
@@ -18,7 +18,7 @@
     <header><button onclick="topFunction()" id="scroll-back">↑</button>
         <div class="container">
             <nav class="row">
-                <div id="header-top"><img id="logo" src="./assets/images/home logo.png"
+                <div id="header-top"><img loading="lazy" id="logo" src="./assets/images/home logo.png"
                         alt="Logo du site Aurélie Lhuillier Photographe">
                     <h3 class="mobile" id="title" data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in"
                         style="cursor: pointer;">Lili Photo</h3><button onClick="toggleMenu()"
@@ -31,18 +31,18 @@
                     <li><a class="nav-link" href="#contact">Contact</a></li>
                     <li class="sub-link"><a class="nav-link" href="./pages/categories.html">Tarifs</a></li>
                     <div id="header-bottom-mobile">
-                        <div class="row"><a href="https://www.instagram.com/liliphoto18/" class="media-link"><img
+                        <div class="row"><a href="https://www.instagram.com/liliphoto18/" class="media-link"><img loading="lazy"
                                     src="./assets/svg/logo-instagram.svg"
-                                    alt="Boutton de redirection vers instagram"></a><a href="#" class="media-link"><img
+                                    alt="Boutton de redirection vers instagram"></a><a href="#" class="media-link"><img loading="lazy"
                                     src="./assets/svg/logo-facebook.svg" alt="Boutton de redirection vers facebook"></a>
                         </div>
                     </div>
                     <ul />
             </nav>
             <div id="header-bottom">
-                <div class="row"><a href="https://www.instagram.com/liliphoto18/" class="media-link"><img
+                <div class="row"><a href="https://www.instagram.com/liliphoto18/" class="media-link"><img loading="lazy"
                             src="./assets/svg/logo-instagram.svg" alt="Boutton de redirection vers instagram"></a><a
-                        href="#" class="media-link"><img src="./assets/svg/logo-facebook.svg"
+                        href="#" class="media-link"><img loading="lazy" src="./assets/svg/logo-facebook.svg"
                             alt="Boutton de redirection vers facebook"></a></div>
             </div>
         </div>
@@ -52,9 +52,9 @@
             <div class="container col">
                 <h3 data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in" style="cursor: pointer;">Lili
                     Photo</h3>
-                <div class="image-container"><img data-aos="fade-in" data-aos-delay="800" data-aos-easing="ease-in-out"
+                <div class="image-container"><img loading="lazy" data-aos="fade-in" data-aos-delay="800" data-aos-easing="ease-in-out"
                         class="left-side" src="./assets/images/lili.webp"
-                        alt="Photo de profile du photographe Aurélie Lhuillier"><img data-aos="fade-in"
+                        alt="Photo de profile du photographe Aurélie Lhuillier"><img loading="lazy" data-aos="fade-in"
                         data-aos-delay="800" data-aos-easing="ease-in-out" id="mobile-image" class="left-side"
                         src="./assets/images/lisa color.webp" alt="Photo de profile du photographe Aurélie Lhuillier">
                 </div>
@@ -69,49 +69,51 @@
             <div class="container">
                 <h2>Galeries</h2>
                 <ul>
-                    <li><img src="./assets/images/1.webp" alt="Image de présentation du travail du photographe"></li>
                     <li>
-                        <div class="layer"></div><img src="./assets/images/katia.webp"
+                        <div class="layer"></div><img loading="lazy" src="./assets/images/1.webp" alt="Image de présentation du travail du photographe">
+                    </li>
+                    <li>
+                        <div class="layer"></div><img loading="lazy" src="./assets/images/katia.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img src="./assets/images/claudia.webp"
+                        <div class="layer"></div><img loading="lazy" src="./assets/images/claudia.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img src="./assets/images/6.webp"
+                        <div class="layer"></div><img loading="lazy" src="./assets/images/6.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img src="./assets/images/7.webp"
+                        <div class="layer"></div><img loading="lazy" src="./assets/images/7.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img src="./assets/images/can.webp"
+                        <div class="layer"></div><img loading="lazy" src="./assets/images/can.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img src="./assets/images/enfant2.webp"
+                        <div class="layer"></div><img loading="lazy" src="./assets/images/enfant2.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img src="./assets/images/4.webp"
+                        <div class="layer"></div><img loading="lazy" src="./assets/images/4.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img src="./assets/images/11.webp"
+                        <div class="layer"></div><img loading="lazy" src="./assets/images/11.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img src="./assets/images/9.webp"
+                        <div class="layer"></div><img loading="lazy" src="./assets/images/9.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img src="./assets/images/8.webp"
+                        <div class="layer"></div><img loading="lazy" src="./assets/images/8.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img src="./assets/images/enfant1.webp"
+                        <div class="layer"></div><img loading="lazy" src="./assets/images/enfant1.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                 </ul>
@@ -135,27 +137,27 @@
                         data-aos-easing="ease-in-out">Contact</h3>
                     <ul>
                         <li data-aos="fade-right" data-aos-delay="1000" data-aos-duration="400"
-                            data-aos-easing="ease-in-out"><img src="./assets/svg/phone.svg"
+                            data-aos-easing="ease-in-out"><img loading="lazy" src="./assets/svg/phone.svg"
                                 alt="Icone de résaux sociaux">
                             <div class="contact-wrapper">Tel: <a href="#!" onclick="copyPhone()"><span id="phone">06 14
                                         75 15 04</span></a></div>
                         </li>
                         <li data-aos="fade-right" data-aos-delay="1050" data-aos-duration="400"
-                            data-aos-easing="ease-in-out"><img src="./assets/svg/mail-outline.svg"
+                            data-aos-easing="ease-in-out"><img loading="lazy" src="./assets/svg/mail-outline.svg"
                                 alt="Icone de résaux sociaux">
                             <div class="contact-wrapper">E-Mail: <a
                                     href="https://mail.google.com/mail/?view=cm&fs=1&to=liliphoto18@gmail.com"><span>liliphoto18@gmail.com</span></a>
                             </div>
                         </li>
                         <li data-aos="fade-right" data-aos-delay="1100" data-aos-duration="400"
-                            data-aos-easing="ease-in-out"><img src="./assets/svg/pine.svg"
+                            data-aos-easing="ease-in-out"><img loading="lazy" src="./assets/svg/pine.svg"
                                 alt="Icone de résaux sociaux">
                             <div class="contact-wrapper studio-contact">Studio: <a
                                     href="http://maps.google.com/?q=25 impasse George Sand 83390 Cuers"><span>25 impasse
                                         George Sand 83390 Cuers</span></a></div>
                         </li>
                         <li data-aos="fade-right" data-aos-delay="1150" data-aos-duration="400"
-                            data-aos-easing="ease-in-out"><img src="./assets/svg/logo-instagram.svg"
+                            data-aos-easing="ease-in-out"><img loading="lazy" src="./assets/svg/logo-instagram.svg"
                                 alt="Icone de résaux sociaux">
                             <div class="contact-wrapper">Instagram: <a
                                     href="https://www.instagram.com/liliphoto18/"><span>@liliphoto18</span></a></div>
