--- a/pages/mon-histoire.html
+++ b/pages/mon-histoire.html
@@ -26,10 +26,10 @@
                 <div class="row">
 
                     <div class="right-side col">
-                        <img src="../assets/images/lili.webp" alt="Image de la photographe" class="mobile">
+                        <img loading="lazy" src="../assets/images/lili.webp" alt="Image de la photographe" class="mobile">
 
                         <p>
-                            <img src="../assets/images/lili.webp" alt="Image de la photographe" class="desktop">
+                            <img loading="lazy" src="../assets/images/lili.webp" alt="Image de la photographe" class="desktop">
                             Bonjour, je m’appelle aurélie, je suis originaire de LYON, là- bas j’y ai suivi des études
                             d’intermittente
                             du spectacle, j’ai appris le maquillage cinéma, théâtre, mode, beauté ainsi que toutes les
