--- a/pages/mon-histoire.html
+++ b/pages/mon-histoire.html
@@ -8,7 +8,7 @@
     <title>Lili Photo - Photographe Pro</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/mon-histoire.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -26,36 +26,28 @@
                 <div class="row">
 
                     <div class="right-side col">
-                        <img loading="lazy" src="../assets/images/lili.webp" alt="Image de la photographe" class="mobile">
+                        <img loading="lazy" src="../assets/images/lili.webp" alt="Image de la photographe"
+                            class="mobile">
 
                         <p>
-                            <img loading="lazy" src="../assets/images/lili.webp" alt="Image de la photographe" class="desktop">
-                            Bonjour, je m’appelle aurélie, je suis originaire de LYON, là- bas j’y ai suivi des études
-                            d’intermittente
-                            du spectacle, j’ai appris le maquillage cinéma, théâtre, mode, beauté ainsi que toutes les
-                            coiffures de
-                            1800 à nos jours, j’ai appris les effets spéciaux et la fabrication de perruques.
-                            Arrivée dans le var, j’ai travaillé dans le médical tout en continuant mon métier de
-                            maquilleuse,
-                            coiffeuse pour les mariages et occasionnellement à l’opéra de Toulon.
-                            Passionnée de photographie, j’ai décidé de ma lancer en tant que professionnelle. J’ai donc
-                            suivi une
-                            formation à l’école FORMA PHOTO PACA au Lavandou.
-                            C’était mon rêve de devenir photographe et de pouvoir vivre de ma passion. J’aime l’histoire
-                            qui se
-                            cache derrière les photos et rappelle immédiatement l’esprit de ce moment figé.
-                            Les photos de familles, bébés, mariages, paysages, animaux, sont des instants de bonheur qui
-                            se
-                            partagent et pour lesquels je souhaite laisser une trace pour les générations à venir.
-                            La photo est une technologie incroyable, cette boîte magique qui saisit tant d’émotions,
-                            c’est la
-                            magie que je souhaite faire ressortir dans mon travail, mon travail de prise de vue, de
-                            retouche et de
-                            création.
-                            Je peux vous aider à aller jusqu’au bout de vos projets en cumulant mes deux métiers, je
-                            vous aide à
-                            réaliser vos envies.
-                            Je suis à l’écoute de tous vos projets…
+                            <img loading="lazy" src="../assets/images/lili.webp" alt="Image de la photographe"
+                                class="desktop">
+                            Bonjour, je m'appelle Aurélie, je suis originaire de Lyon. Là-bas, j'ai suivi des études
+                            d'intermittence du spectacle, j'ai appris le maquillage cinéma, théâtre, mode et beauté
+                            ainsi que toutes les coiffures des années 1800 à nos jours. J'ai également appris les effets
+                            spéciaux et la fabrication de perruques. Arrivée dans le Var, j'ai travaillé dans le médical
+                            tout en continuant mon métier de maquilleuse et de coiffeuse pour les mariages et
+                            occasionnellement à l'Opéra de Toulon. Passionnée de photographie, j'ai décidé de me lancer
+                            en tant que professionnelle. J'ai donc suivi une formation à l'École FORMA PHOTO PACA au
+                            Lavandou. C'était mon rêve de devenir photographe et de pouvoir vivre de ma passion. J'aime
+                            l'histoire qui se cache derrière les photos et qui rappelle immédiatement l'esprit de ce
+                            moment figé. Les photos de familles, bébés, mariages, paysages et animaux sont des instants
+                            de bonheur qui se partagent et pour lesquels je souhaite laisser une trace pour les
+                            générations à venir. La photo est une technologie incroyable, cette boîte magique qui saisit
+                            tant d'émotions, c'est la magie que je souhaite faire ressortir dans mon travail, ma prise
+                            de vue, ma retouche et ma création. Je peux vous aider à aller jusqu'au bout de vos projets
+                            en cumulant mes deux métiers, je vous aide à réaliser vos envies. Je suis à l'écoute de tous
+                            vos projets…
                         </p>
                         <a href="../accueil.html" class="button">← Retour</a>
 
@@ -67,19 +59,8 @@
     </main>
 
     <script defer type="text/javascript" src="../script.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init({
-            offset: 100,
-            delay: 200,
-            duration: 1000,
-            disable: function () {
-                var maxWidth = 1920;
-                return window.innerWidth < maxWidth;
-            }
-        });
+    <script defer type="text/java" src="../cursor.js"></script>
 
-    </script>
 </body>
 
 </html>
