--- a/pages/tarifs/grossesse.html
+++ b/pages/tarifs/grossesse.html
@@ -8,7 +8,7 @@
     <title>Lili Photo - Photographe Pro</title>
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="../../css/tarifs.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -104,19 +104,8 @@
     </main>
 
     <script defer type="text/javascript" src="../script.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init({
-            offset: 100,
-            delay: 200,
-            duration: 1000,
-            disable: function () {
-                var maxWidth = 1920;
-                return window.innerWidth < maxWidth;
-            }
-        });
+    <script defer type="text/javascript" src="../../cursor.js"></script>
 
-    </script>
 </body>
 
 </html>
