--- a/accueil.html
+++ b/accueil.html
@@ -11,10 +11,14 @@
     <title>Lili Photo - Photographe Pro</title>
     <link rel="icon" href="./assets/svg/camera.svg" type="image/svg">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
+    <div id="image-view" onclick="closeViewer()">
+        <img id="showed" src="" alt="Image à voir en grand">
+        <button><img src="./assets/svg/x.svg" alt=""></button>
+    </div>
+
     <header><button onclick="topFunction()" id="scroll-back">↑</button>
         <div class="container">
             <nav class="row">
@@ -37,7 +41,7 @@
                                     src="./assets/svg/logo-facebook.svg" alt="Boutton de redirection vers facebook"></a>
                         </div>
                     </div>
-                    <ul />
+                    <ul>
             </nav>
             <div id="header-bottom">
                 <div class="row"><a href="https://www.instagram.com/liliphoto18/" class="media-link"><img loading="lazy"
@@ -70,50 +74,50 @@
                 <h2>Galeries</h2>
                 <ul>
                     <li>
-                        <div class="layer"></div><img loading="lazy" src="./assets/images/1.webp" alt="Image de présentation du travail du photographe">
+                        <div class="layer"></div><img class="gallery-image" loading="lazy" src="./assets/images/1.webp" alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img loading="lazy" src="./assets/images/katia.webp"
+                        <div class="layer"></div><img class="gallery-image" loading="lazy" src="./assets/images/katia.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img loading="lazy" src="./assets/images/claudia.webp"
+                        <div class="layer"></div><img class="gallery-image" loading="lazy" src="./assets/images/claudia.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img loading="lazy" src="./assets/images/6.webp"
+                        <div class="layer"></div><img class="gallery-image" loading="lazy" src="./assets/images/6.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img loading="lazy" src="./assets/images/7.webp"
+                        <div class="layer"></div><img class="gallery-image" loading="lazy" src="./assets/images/7.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img loading="lazy" src="./assets/images/can.webp"
+                        <div class="layer"></div><img class="gallery-image" loading="lazy" src="./assets/images/can.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img loading="lazy" src="./assets/images/enfant2.webp"
+                        <div class="layer"></div><img class="gallery-image" loading="lazy" src="./assets/images/enfant2.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img loading="lazy" src="./assets/images/4.webp"
+                        <div class="layer"></div><img class="gallery-image" loading="lazy" src="./assets/images/4.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img loading="lazy" src="./assets/images/11.webp"
+                        <div class="layer"></div><img class="gallery-image" loading="lazy" src="./assets/images/11.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img loading="lazy" src="./assets/images/9.webp"
+                        <div class="layer"></div><img class="gallery-image" loading="lazy" src="./assets/images/9.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img loading="lazy" src="./assets/images/8.webp"
+                        <div class="layer"></div><img class="gallery-image" loading="lazy" src="./assets/images/8.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
-                        <div class="layer"></div><img loading="lazy" src="./assets/images/enfant1.webp"
+                        <div class="layer"></div><img class="gallery-image" loading="lazy" src="./assets/images/enfant1.webp"
                             alt="Image de présentation du travail du photographe">
                     </li>
                 </ul>
@@ -168,8 +172,43 @@
         </section>
     </main>
     <script defer type="text/javascript" src="./script.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>AOS.init({ offset: 100, delay: 200, duration: 1000, disable: function () { var maxWidth = 1920; return window.innerWidth < maxWidth; } }); </script>
+    <script defer type="text/javascript" src="./cursor.js"></script>
+
+    <script defer>
+
+const imgView = document.getElementById("image-view");
+const galImages = document.querySelectorAll(".gallery-image");
+
+const toHideItem = [
+  document.querySelector("header"),
+  document.querySelector("main"),
+];
+
+function closeViewer() {
+  toHideItem.forEach((item) => {
+    item.style.display = "inherit";
+  });
+  imgView.classList.toggle("active");
+}
+
+function toggleHiddenItems() {
+  toHideItem.forEach((item) => {
+    item.style.display = "none";
+  });
+}
+
+galImages.forEach((element) => {
+  element.addEventListener("click", () => {
+    const image = imgView.children[0];
+
+    image.src = element.src;
+    imgView.classList.toggle("active");
+    toggleHiddenItems();
+  });
+});
+
+    </script>
+
 </body>
 
 </html>
