--- a/pages/categories.html
+++ b/pages/categories.html
@@ -8,7 +8,6 @@
     <title>Lili Photo - Photographe Pro</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/tarifs.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -64,19 +63,7 @@
     </main>
 
     <script defer type="text/javascript" src="../script.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init({
-            offset: 100,
-            delay: 200,
-            duration: 1000,
-            disable: function () {
-                var maxWidth = 1920;
-                return window.innerWidth < maxWidth;
-            }
-        });
-
-    </script>
+    <script defer type="text/javascript" src="../cursor.js"></script>
 </body>
 
 </html>
